Fix calendar z-index
(Thanks /u/rosemarysbaby)

--- a/src/components/TimePicker.css
+++ b/src/components/TimePicker.css
@@ -3,3 +3,7 @@
   background-color: var(--gray);
   color: var(--white);
 }
+
+.DayPickerInput-OverlayWrapper {
+  z-index: 1001; /* Avoid calendar under footer */
+}
